--- a/asteroids-1/Makefile
+++ b/asteroids-1/Makefile
@@ -9,7 +9,7 @@ AS              = msp430-elf-gcc -mmcu=${CPU} -c
 all:shapemotion.elf
 
 #additional rules for files
-shapemotion.elf: ${COMMON_OBJECTS} shapemotion.o wdt_handler.o triangle.o star.o
+shapemotion.elf: main.o asteroids.o mov_layer.o timer.o str_util.o star.o triangle.o wdt_handler.o
 	${CC} -mmcu=${CPU}   -o $@ $^ -L../lib -lTimer -lLcd -lShape -lCircle -lp2sw
 
 load: shapemotion.elf
