--- a/lcdLib/Makefile
+++ b/lcdLib/Makefile
@@ -4,9 +4,9 @@ CPU             = msp430g2553
 CFLAGS          = -mmcu=${CPU} -Os -I../h
 
 #switch the compiler (for the internal make rules)
-CC              = msp430-gcc
-AS              = msp430-as
-AR              = msp430-ar
+CC              = msp430-elf-gcc
+AS              = msp430-elf-as
+AR              = msp430-elf-ar
 
 libLcd.a: font-11x16.o font-5x7.o font-8x12.o lcdutils.o lcddraw.o
 	$(AR) crs $@ $^
